fix: desktop sigchain spacing, remove donate

--- a/components/DesktopTransactionPayload/DesktopTransactionPayload.scss
+++ b/components/DesktopTransactionPayload/DesktopTransactionPayload.scss
@@ -2,5 +2,6 @@
   &__sigchain {
     border-top-left-radius: $app-br;
     border-top-right-radius: $app-br;
+    padding: $padding-normal;
   }
 }
